--- a/doriath.yml
+++ b/doriath.yml
@@ -159,6 +159,11 @@ build:
     from: ./elk/logstash
     depend: anduin/anduin-common
 
+  - name: anduin/kibana
+    tag: 6.1.3
+    from: ./elk/kibana
+    depend: phusion/baseimage
+
   - name: anduin/flink-base
     tag: 1.4.0
     from: ./flink/flink-base
